--- a/bestsales.html
+++ b/bestsales.html
@@ -9,13 +9,13 @@
     <link crossorigin='' href='https://cdnjs.cloudflare.com' rel='preconnect'/>
     <link crossorigin='' href='https://cdn.jsdelivr.net' rel='preconnect'/>
     <link crossorigin='' href='https://www.blogger.com' rel='preconnect'/>
-    <link crossorigin='' href='https://www.bestsales.vn/feeds/posts/default/-/blogger-templates' rel='preconnect'/>
+    <link crossorigin='' href='https://bestsalesvn.blogspot.com/feeds/posts/default/-/blogger-templates' rel='preconnect'/>
     <link crossorigin='' href='https://images.dmca.com' rel='preconnect'/>
     <link crossorigin='' href='https://blogger.googleusercontent.com' rel='preconnect'/>
     <link crossorigin='' href='https://bizweb.dktcdn.net' rel='preconnect'/>
     <link crossorigin='' href='https://salt.tikicdn.com' rel='preconnect'/>
     <link crossorigin='' href='https://cf.shopee.vn' rel='preconnect'/>
-    <link crossorigin='' href='https://www.bestsales.vn' rel='preconnect'/>
+    <link crossorigin='' href='https://bestsalesvn.blogspot.com' rel='preconnect'/>
     <link crossorigin='' href='https://code.jquery.com' rel='preconnect'/>
 
     <link href='https://cf.shopee.vn' rel='dns-prefetch'/>
@@ -27,12 +27,12 @@
     <link href='https://4.bp.blogspot.com' rel='dns-prefetch'/>
     <link href='https://cdnjs.cloudflare.com' rel='dns-prefetch'/>
     <link href='https://www.blogger.com' rel='dns-prefetch'/>
-    <link href='https://www.bestsales.vn/feeds/posts/default/-/blogger-templates' rel='dns-prefetch'/>
+    <link href='https://bestsalesvn.blogspot.com/feeds/posts/default/-/blogger-templates' rel='dns-prefetch'/>
     <link href='https://images.dmca.com' rel='dns-prefetch'/>
     <link href='https://blogger.googleusercontent.com' rel='dns-prefetch'/>
     <link href='https://bizweb.dktcdn.net' rel='dns-prefetch'/>
     <link href='https://salt.tikicdn.com' rel='dns-prefetch'/>
-    <link href='https://www.bestsales.vn' rel='dns-prefetch'/>
+    <link href='https://bestsalesvn.blogspot.com' rel='dns-prefetch'/>
     <!-- Required meta tags -->
     <meta charset='utf-8'/>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
@@ -3912,7 +3912,7 @@
     <!-- Tất cả -->
     <script>
                                         //<![CDATA[
-                                        let homepageurl = "https://www.bestsales.vn/";
+                                        let homepageurl = "https://bestsalesvn.blogspot.com/";
                                         let affLink = "https://go.isclix.com/deep_link/5637987508533784952?url=";
                                         let page = 1;
                                         let labelName = "";
